--- a/JyGDreams/templates/add_patient.html
+++ b/JyGDreams/templates/add_patient.html
@@ -1,5 +1,5 @@
 <!-- templates/add_patient.html -->
-{% extends "JyG/layout.html" %}
+{% extends "layout.html" %}
 {% load static %}
 
 {% block title %}Agregar Paciente - JyGDreams{% endblock %}
