--- a/JyGDreams/templates/layout.html
+++ b/JyGDreams/templates/layout.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   {% load static %}
-  <link rel="stylesheet" href="{% static 'JyGDreams/navbar.css' %}">
+  <link rel="stylesheet" href="{% static 'JyGDreams/layout.css' %}">
   {% block extra_css %}{% endblock %}
 </head>
 <body>
@@ -18,7 +18,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="{% url 'index' %}">
         <i class="fas fa-leaf"></i> JyGDreams
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
