Login listo e ingreso paciente(revisar: Alertas )

--- a/JyGDreams/templates/index.html
+++ b/JyGDreams/templates/index.html
@@ -17,7 +17,7 @@
             <i class="bi bi-person-fill icon"></i>
             <h5 class="card-title">Pacientes</h5>
             <p class="card-text">Gestiona tus pacientes y su información personal.</p>
-            <a href="{% url 'agregar_paciente' %}" class="btn btn-emerald">Ir a Pacientes</a>
+            <a href="{% url 'tabla_paciente' %}" class="btn btn-emerald">Ir a Pacientes</a>
         </div>
     </div>
 
