--- a/JyGDreams/templates/edit_patient.html
+++ b/JyGDreams/templates/edit_patient.html
@@ -1,11 +1,8 @@
-<!-- templates/add_patient.html -->
+<!-- templates/edit_patient.html -->
 {% extends "layout.html" %}
 {% load static %}
 
-{% block title %}Agregar Paciente - JyGDreams{% endblock %}
-{% block extra_js %}
-<script src="{% static 'JyGDreams/validando_agregarpx.js' %}"></script>
-{% endblock %}
+{% block title %}Editar Paciente - JyGDreams{% endblock %}
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'JyGDreams/add_patient.css' %}">
 {% endblock %}
@@ -13,61 +10,60 @@
 {% block content %}
 <div class="container py-5">
   <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4 gap-3">
-    <h2><i class="bi bi-person-plus-fill me-2"></i>Agregar Paciente</h2>
+    <h2><i class="bi bi-person-plus-fill me-2"></i>Editar Paciente</h2>
     <a href="{% url 'tabla_paciente' %}" class="btn btn-primary">
       <i class="bi bi-table"></i> Ver Pacientes
     </a>
   </div>
 
-<div id="formAgregarPaciente" class="form-container">
+<div class="form-container">
   <form method="post">
     {% csrf_token %}
     <div class="row mb-4">
       <div class="col-md-6">
         <label class="form-label">Nombre</label>
-        <input type="text" class="form-control" name="nombre" placeholder="Ej. Juan"  required>
+        <input type="text" class="form-control" name="nombre" value="{{ paciente.nombre }}" required>
       </div>
       <div class="col-md-6">
         <label class="form-label">Apellido</label>
-        <input type="text" class="form-control" name="apellido" placeholder="Ej. Pérez" required>
+        <input type="text" class="form-control" name="apellido" value="{{ paciente.apellido }}" required>
       </div>
     </div>
 
     <div class="row mb-4">
       <div class="col-md-6">
         <label class="form-label">Fecha de Nacimiento</label>
-        <input type="date" class="form-control" name="fecha_nacimiento" required>
+        <input type="date" class="form-control" name="fecha_nacimiento" value="{{ paciente.fecha_nacimiento|date:'Y-m-d' }}" required>
       </div>
       <div class="col-md-6">
         <label class="form-label">Ocupación</label>
-        <input type="text" class="form-control" name="ocupacion" placeholder="Ej. Estudiante" required>
+        <input type="text" class="form-control" name="ocupacion" value="{{ paciente.ocupacion }} " required>
       </div>
     </div>
 
     <div class="row mb-4">
       <div class="col-md-6">
         <label class="form-label">Correo</label>
-        <input type="email" class="form-control" name="correo" placeholder="correo@ejemplo.com" required>
+        <input type="email" class="form-control" name="correo" value="{{ paciente.correo }}" required>
       </div>
       <div class="col-md-6">
         <label class="form-label">Teléfono</label>
-        <input type="text" class="form-control" name="telefono" placeholder="0999999999" required>
+        <input type="text" class="form-control" name="telefono" value="{{ paciente.telefono }}" required>
       </div>
     </div>
 
     <div class="mb-4">
       <label class="form-label">Dirección</label>
-      <textarea class="form-control" name="direccion" rows="3" placeholder="Dirección completa" required></textarea>
+      <textarea class="form-control" name="direccion" rows="3" required>{{ paciente.direccion }}</textarea>
     </div>
 
     <div class="d-grid">
-      <button class="btn btn-success" type="submit" id="btnAgregar">
-        <i class="bi bi-plus-circle"></i> Agregar Paciente
+      <button class="btn btn-success" type="submit">
+        <i class="bi bi-plus-circle"></i> Guardar cambios
       </button>
     </div>
   </form>
 </div>
-
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 {% if messages %}
