--- a/JyGDreams/templates/edit_patient.html
+++ b/JyGDreams/templates/edit_patient.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="d-grid">
-      <button class="btn btn-success" type="submit">
+      <button class="btn btn-warning" type="submit">
         <i class="bi bi-plus-circle"></i> Guardar cambios
       </button>
     </div>
