--- a/JyGDreams/templates/layout.html
+++ b/JyGDreams/templates/layout.html
@@ -8,7 +8,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   {% load static %}
   <link rel="stylesheet" href="{% static 'JyGDreams/layout.css' %}">
   {% block extra_css %}{% endblock %}
@@ -29,8 +28,13 @@
         <ul class="navbar-nav align-items-center mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="{% url 'tabla_paciente' %}">Pacientes</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Expedientes</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Citas</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Pagos</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'cita_pacientes' %}">Citas</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">
+              <i class="bi bi-door-closed-fill"></i> Salir
+            </a>
+          </li>
+          <!-- <li class="nav-item"><a class="nav-link" href="#">Pagos</a></li> -->
         </ul>
       </div>
     </div>
