--- a/JyGDreams/templates/cards_patient.html
+++ b/JyGDreams/templates/cards_patient.html
@@ -10,7 +10,7 @@
     {% for paciente in pacientes %}
       {% cycle 'bg1' 'bg2' 'bg3' 'bg4' 'bg5' as color_class silent %}
       <div class="col-sm-12 col-md-6 col-lg-4 d-flex">
-        <a href="{% url 'cuadros_citas' %}" class="card-link flex-fill">
+        <a href="{% url 'home_citas' paciente.id %}" class="card-link flex-fill">
           <div class="paciente-card {{ color_class }} h-100">
             <div class="card-body d-flex flex-column justify-content-center align-items-start">
               <h5 class="card-title mb-2">{{ paciente.nombre }} {{ paciente.apellido }}</h5>
