--- a/JyGDreams/templates/home_citas.html
+++ b/JyGDreams/templates/home_citas.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<link rel="stylesheet" href="{% static 'JYGDreams/home_citas.css' %}">
+<link rel="stylesheet" href="{% static 'JyGDreams/home_citas.css' %}">
 
 <div class="container mt-5">
   <div class="d-flex justify-content-between align-items-center mb-4">
