--- a/ClinicaWeb/JyGDreams/templates/cards_patient.html
+++ b/ClinicaWeb/JyGDreams/templates/cards_patient.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<link rel="stylesheet" href="{% static 'JYGDreams/cards_patient.css' %}">
+<link rel="stylesheet" href="{% static 'JyGDreams/cards_patient.css' %}">
 
 <div class="container py-5">
   <h2 class="text-center mb-5 title"><i class="bi bi-person-fill me-2"></i>Pacientes Registrados</h2>
