arreglando alertas e icono login

--- a/ClinicaWeb/JyGDreams/templates/login.html
+++ b/ClinicaWeb/JyGDreams/templates/login.html
@@ -14,7 +14,7 @@
 <div class="login-container">
   <!-- Izquierda -->
   <div class="login-left d-flex flex-column justify-content-center align-items-center">
-    <img src="https://cdn-icons-png.flaticon.com/512/823/823233.png" alt="Logo Clínica" class="logo-left mb-4">
+    <img src="{% static 'JyGDreams/img/icon-clinica.png' %}" height="300px" alt="Logo Clínica" class="logo">
     <h1 class="text-white fw-bold text-center">Clínica Estética<br>JyGDreams</h1>
   </div>
 
