--- a/ClinicaWeb/JyGDreams/templates/add_cita.html
+++ b/ClinicaWeb/JyGDreams/templates/add_cita.html
@@ -101,4 +101,17 @@
     </form>
   </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+{% if messages %}
+<script>
+  Swal.fire({
+    icon: 'success',
+    title: '{% for message in messages %}{{ message }}{% endfor %}',
+    showConfirmButton: false,
+    timer: 2000
+  });
+</script>
+{% endif %}
+
 {% endblock %}
