--- a/ClinicaWeb/JyGDreams/templates/home_citas.html
+++ b/ClinicaWeb/JyGDreams/templates/home_citas.html
@@ -49,6 +49,19 @@
     {% endif %}
   </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+{% if messages %}
+<script>
+  Swal.fire({
+    icon: 'success',
+    title: '{% for message in messages %}{{ message }}{% endfor %}',
+    showConfirmButton: false,
+    timer: 2000
+  });
+</script>
+{% endif %}
+
 {% endblock %}
 
 {% block extra_js %}
