--- a/ClinicaWeb/JyGDreams/templates/index.html
+++ b/ClinicaWeb/JyGDreams/templates/index.html
@@ -51,4 +51,17 @@
         </div>
     </div> -->
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+{% if messages %}
+<script>
+  Swal.fire({
+    icon: 'success',
+    title: '{% for message in messages %}{{ message }}{% endfor %}',
+    showConfirmButton: false,
+    timer: 2000
+  });
+</script>
+{% endif %}
+
 {% endblock %}
