--- a/ClinicaWeb/JyGDreams/templates/tabla_patient.html
+++ b/ClinicaWeb/JyGDreams/templates/tabla_patient.html
@@ -52,4 +52,17 @@
         </table>
     </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+{% if messages %}
+<script>
+  Swal.fire({
+    icon: 'success',
+    title: '{% for message in messages %}{{ message }}{% endfor %}',
+    showConfirmButton: false,
+    timer: 2000
+  });
+</script>
+{% endif %}
+
 {% endblock %}
