balerina capuchina(editado de pago listo, quedando detalles de diseño)

--- a/ClinicaWeb/JyGDreams/templates/detail_pago.html
+++ b/ClinicaWeb/JyGDreams/templates/detail_pago.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="d-grid mt-4">
-      <a href="{% url 'editar_pago' %}" class="btn btn-warning">
+      <a href="{% url 'editar_pago' cita.id %}" class="btn btn-warning">
         <i class="bi bi-pencil-square"></i> Editar Pago
       </a>
     </div>
