--- a/ClinicaWeb/JyGDreams/templates/tabla_patient.html
+++ b/ClinicaWeb/JyGDreams/templates/tabla_patient.html
@@ -15,12 +15,19 @@
         </a>
     </div>
 
-    <form method="get" class="mb-3 position-relative" autocomplete="off" style="max-width:400px;">
-      <input type="text" name="q" id="busquedaPaciente" class="form-control" placeholder="Buscar por nombre o apellido" value="{{ query }}">
+    <form method="get" class="mb-4 p-3 search-bar-custom" autocomplete="off" style="max-width:500px; margin:auto;">
+      <div class="input-group">
+        <span class="input-group-text search-icon-bg"><i class="bi bi-search"></i></span>
+        <input type="text" name="q" id="busquedaPaciente" class="form-control border-emerald" placeholder="Buscar por nombre o apellido" value="{{ query }}">
+      </div>
       <div id="sugerenciasPacientes" class="list-group position-absolute w-100" style="z-index:10;"></div>
-      <div class="d-flex gap-2 mt-2">
-          <button type="submit" class="btn btn-primary">Buscar</button>
-          <a href="{% url 'tabla_paciente' %}" class="btn btn-secondary">Mostrar todos</a>
+      <div class="d-flex gap-2 mt-3">
+        <button type="submit" class="btn btn-outline-emerald w-100">
+          <i class="bi bi-search me-1"></i> Buscar
+        </button>
+        <a href="{% url 'tabla_paciente' %}" class="btn btn-outline-emerald w-100">
+          <i class="bi bi-arrow-clockwise me-1"></i> Volver
+        </a>
       </div>
     </form>
 
