--- a/ClinicaWeb/JyGDreams/templates/layout.html
+++ b/ClinicaWeb/JyGDreams/templates/layout.html
@@ -27,7 +27,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
         <ul class="navbar-nav align-items-center mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link" href="{% url 'tabla_paciente' %}">Pacientes</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Expedientes</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'expediente_pacientes' %}">Expedientes</a></li>
           <li class="nav-item"><a class="nav-link" href="{% url 'cita_pacientes' %}">Citas</a></li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">
