--- a/ClinicaWeb/JyGDreams/templates/index.html
+++ b/ClinicaWeb/JyGDreams/templates/index.html
@@ -41,15 +41,15 @@
         </div>
     </div>
 
-    <!-- Pagos -->
-    <!-- <div class="card card-action">
+    <!-- Dashboard -->
+    <div class="card card-action">
         <div class="card-body">
-            <i class="bi bi-credit-card-fill icon"></i>
-            <h5 class="card-title">Pagos</h5>
-            <p class="card-text">Revisa y gestiona los pagos y facturas del sistema.</p>
-            <a href="#" class="btn btn-emerald">Gestionar Pagos</a>
+            <i class="bi bi-file-bar-graph-fill icon"></i>
+            <h5 class="card-title">Estadisticas</h5>
+            <p class="card-text">Revisa como va la clinica en numeros</p>
+            <a href="{% url 'stadistic' %}" class="btn btn-emerald">Revisar estadisticas</a>
         </div>
-    </div> -->
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
